[gd_scene format=3 uid="uid://c1cgj75pxnbmi"]

[ext_resource type="Script" uid="uid://bketfjr8vjw3s" path="res://scenes/managers/test_game_manager.gd" id="1_cj3s9"]
[ext_resource type="PackedScene" uid="uid://c6y0vgs3w4xfr" path="res://node_2d.tscn" id="2_a8k5h"]
[ext_resource type="PackedScene" uid="uid://cedmmlngvoxls" path="res://scenes/characters/enemy_rat.tscn" id="3_pj8xf"]

[node name="MainTestScene" type="Node2D" unique_id=385360620]
script = ExtResource("1_cj3s9")

[node name="TestGameManager" type="CanvasLayer" parent="." unique_id=877601973]
layer = 128

[node name="TestUI" type="Label" parent="TestGameManager" unique_id=1529543939]
offset_left = 10.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 20
text = "TEST MODE - Joueur vs Ennemi
[Click droit pour attaquer]
[WASD pour bouger]"

[node name="PlayerSpawn" type="Marker2D" parent="." unique_id=1258904561]
position = Vector2(150, 400)

[node name="EnemySpawn" type="Marker2D" parent="." unique_id=181436278]
position = Vector2(900, 400)

[node name="Player" parent="." unique_id=1919215810 instance=ExtResource("2_a8k5h")]
position = Vector2(150, 400)

[node name="Enemy" parent="." unique_id=1187070904 instance=ExtResource("3_pj8xf")]
position = Vector2(900, 400)

[node name="WorldBounds" type="ColorRect" parent="." unique_id=1940482675]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="DebugLabel" type="Label" parent="." unique_id=280704629]
offset_left = 10.0
offset_top = -100.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_font_sizes/font_size = 16
text = "Player HP: 100 | Enemy HP: 15
Distance: 750"
