extends Node2D
## Gestionnaire de scÃ¨ne de test - Joueur vs Ennemi
## Pour tester la mÃ©canique de combat avec auto-attaque (mobile)

class_name TestGameManager

@onready var player: Player = $Player
@onready var enemy = $Enemy
@onready var debug_label: Label = $DebugLabel
@onready var test_ui: Label = $TestGameManager/TestUI

var is_running: bool = true

# ========================
# AUTO-ATTACK CONFIG (Mobile optimisÃ©)
# ========================
var player_attack_timer: float = 0.0
var enemy_attack_timer: float = 0.0

func _ready() -> void:
	print("âœ… TEST SCENE LOADED - Joueur vs Ennemi")
	print("ğŸ“ Player Position: ", player.global_position)
	print("ğŸ“ Enemy Position: ", enemy.global_position)
	print("ğŸ® CONTRÃ”LES (MOBILE):")
	print("   - Stick gauche = Mouvement")
	print("   - Auto-attaque chaque 0.5s (rÃ©duit avec stats)")
	print("   - SPACE/Tap = Attaque manuelle")
	print("   - ESC = Quitter")
	
	if not player:
		push_error("âŒ Player not found!")
	if not enemy:
		push_error("âŒ Enemy not found!")

func _process(delta: float) -> void:
	if not is_running:
		return
	
	# Gestion des entrÃ©es
	handle_player_input()
	
	# Auto-attaque joueur (delay rÃ©duit par les stats)
	update_player_auto_attack(delta)
	
	# Auto-attaque ennemi (basÃ©e sur sa vitesse et difficultÃ©)
	update_enemy_auto_attack(delta)
	
	# Update des infos de debug
	update_debug_display()
	
	# VÃ©rifier victoire/dÃ©faite
	check_battle_state()

func handle_player_input() -> void:
	# Mouvement WASD (simule analog stick gauche)
	var input_dir := Input.get_vector("ui_left", "ui_down", "ui_right", "ui_up")
	player.set_left_stick(input_dir)
	
	# Attaque manuelle - bonus en appuyant sur SPACE
	if Input.is_action_just_pressed("ui_accept"):
		# Attaquer vers l'ennemi
		var attack_dir = (enemy.global_position - player.global_position).normalized()
		player.set_right_stick(attack_dir)
		player_attack_timer = 0.0  # Reset timer pour attaque immÃ©diate
		print("ğŸ—¡ï¸  ATTAQUE MANUELLE du joueur")
	
	# Quitter
	if Input.is_action_just_pressed("ui_cancel"):
		print("â¹ï¸  Test terminÃ©")
		is_running = false
		get_tree().quit()

func update_player_auto_attack(delta: float) -> void:
	"""Auto-attaque du joueur - delay basÃ© sur son attack_cooldown"""
	player_attack_timer += delta
	
	# Le cooldown est rÃ©duit par les stats (base: 0.5s)
	var attack_delay = player.attack_cooldown
	
	if player_attack_timer >= attack_delay:
		player_attack_timer = 0.0
		
		# VÃ©rifier si l'ennemi est en portÃ©e
		var distance = player.global_position.distance_to(enemy.global_position)
		if distance < player.attack_range + 50:  # +50 pour la portÃ©e de hit
			var attack_dir = (enemy.global_position - player.global_position).normalized()
			player.set_right_stick(attack_dir)

func update_enemy_auto_attack(delta: float) -> void:
	"""Auto-attaque de l'ennemi - delay basÃ© sur sa dÃ©tection"""
	enemy_attack_timer += delta
	
	# Delay d'attaque ennemi: plus bas = plus agressif
	var attack_delay = 0.8 / max(0.5, enemy.speed / 100.0)  # ScalÃ© sur la vitesse
	
	if enemy_attack_timer >= attack_delay:
		enemy_attack_timer = 0.0
		
		# VÃ©rifier si le joueur est en portÃ©e
		var distance = player.global_position.distance_to(enemy.global_position)
		if distance < 100:  # PortÃ©e d'attaque ennemi
			# Attaquer le joueur
			var damage = enemy.calculate_damage_with_crit()
			player.take_damage(damage)
			print("âš”ï¸  Ennemi inflige ", damage, " dÃ©gÃ¢ts")

func update_debug_display() -> void:
	"""Met Ã  jour l'affichage des stats en temps rÃ©el"""
	if not player or not enemy:
		return
	
	var distance = player.global_position.distance_to(enemy.global_position)
	
	# Construction du texte (format correct pour Godot 4.6)
	var text = "ğŸ® TEST BATTLE DEBUG\n"
	text += "â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n"
	text += "ğŸ‘¤ JOUEUR:\n"
	text += "  HP: " + str(player.current_hp) + "/" + str(player.max_hp)
	text += " | Dmg: " + str(player.damage)
	text += " | Spd: " + str(player.speed) + " | Crit: " + str(int(player.crit_chance * 100)) + "%\n"
	text += "  Pos: (" + str(int(player.global_position.x)) + ", " + str(int(player.global_position.y)) + ")"
	text += " | Kills: " + str(player.kills_count) + " | Glory: " + str(player.glory_earned) + "\n"
	text += "  Attaque: " + str(snappedf(player_attack_timer, 0.01)) + "s / " + str(snappedf(player.attack_cooldown, 0.01)) + "s\n"
	
	text += "\nâš”ï¸  ENNEMI (Rat):\n"
	text += "  HP: " + str(enemy.current_hp) + "/" + str(enemy.max_hp)
	text += " | Dmg: " + str(enemy.damage) + " | Spd: " + str(enemy.speed) + "\n"
	text += "  Pos: (" + str(int(enemy.global_position.x)) + ", " + str(int(enemy.global_position.y)) + ")\n"
	text += "  Attaque: " + str(snappedf(enemy_attack_timer, 0.01)) + "s\n"
	
	text += "\nğŸ“ Distance: " + str(snappedf(distance, 0.1)) + " px\n"
	
	if distance < 100:
		text += "ğŸ”´ COMBAT ENGAGÃ‰! (< 100px)\n"
	elif distance < 200:
		text += "ğŸŸ  Proche (< 200px)\n"
	else:
		text += "ğŸŸ¢ Hors de portÃ©e\n"
	
	text += "\nâŒ¨ï¸  CONTRÃ”LES: WASD(move) SPACE(bonus atk) ESC(quit)"
	
	debug_label.text = text

func check_battle_state() -> void:
	"""VÃ©rifie si la bataille est terminÃ©e"""
	if not is_running:
		return
	
	if player.current_hp <= 0:
		print("ğŸ’€ GAME OVER - Joueur vaincu!")
		debug_label.text = "ğŸ’€ DÃ‰FAITE!\nLe joueur a Ã©tÃ© vaincu par le Rat\nRespawn en 3s..."
		is_running = false
		await get_tree().create_timer(3.0).timeout
		get_tree().reload_current_scene()
	
	if enemy.current_hp <= 0:
		print("ğŸ‰ VICTOIRE - Ennemi vaincu!")
		var glory_text = "ğŸ‰ VICTOIRE!\nLe Rat a Ã©tÃ© vaincu\nGloire gagnÃ©e: " + str(player.glory_earned) + "\n\nRespawn en 3s..."
		debug_label.text = glory_text
		is_running = false
		await get_tree().create_timer(3.0).timeout
		respawn_enemy()

func respawn_enemy() -> void:
	"""Respawn un nouvel ennemi pour une nouvelle vague de test"""
	print("ğŸ”„ Nouvel ennemi spawnÃ©")
	is_running = true
	player_attack_timer = 0.0
	enemy_attack_timer = 0.0
	
	# RÃ©initialiser l'ennemi
	enemy.current_hp = enemy.max_hp
	enemy.global_position = Vector2(900, 400)
	enemy.velocity = Vector2.ZERO
	
	# RÃ©initialiser le joueur (optionnel, pour garder les dÃ©gÃ¢ts)
	# player.current_hp = player.max_hp
	
	print("âœ… Ennemi rÃ©apparu avec " + str(enemy.current_hp) + " HP")

func _input(event: InputEvent) -> void:
	"""Snapshot des stats au clic gauche"""
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
		var distance = player.global_position.distance_to(enemy.global_position)
		print("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€")
		print("ğŸ“Š SNAPSHOT:")
		print("Distance: " + str(snappedf(distance, 0.1)))
		print("Player: HP=" + str(player.current_hp) + ", Pos=" + str(player.global_position))
		print("Enemy:  HP=" + str(enemy.current_hp) + ", Pos=" + str(enemy.global_position))
		print("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€")
